--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 <html>
+    <head>
+    <title>Мой сайт</title>
+    <link rel="stylesheet" href="style.css"/>
+  </head>
     <h1 style=background color:lightgreen;color darkgreen text-align center;font-size:50px">Pizza Hour</h1>
     <h2 style="background-color:firebrick;color:white;font size:30px">Выбирай пиццу скорее</h2>
     <table style="font-size:20px;border:1px solid firebrick border-collapse:collapse">
