--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
     <head>
-    <title>Мой сайт</title>
+    <title>Мой dffdfdfайт</title>
     <link rel="stylesheet" href="style.css"/>
   </head>
     <h1 style=background color:lightgreen;color darkgreen text-align center;font-size:50px">Pizza Hour</h1>
