--- a/index.html
+++ b/index.html
@@ -1,1 +1,63 @@
-empty!
+
+<html>
+    <head>
+         <title>Мой сайт</title>
+    </head>
+    <body style="font-family:sans-serif;">
+        <header style="background-color:darkorange;color:black">
+            <img src="./MMMMMMMMFilessss/Frame 4_0_1603385959.svg" height="50px" id="start">
+            <a href="/#games" style="color:black; font-size:20px;">Какие игры мы делаем?</a>
+            <a href="/#price" style="color:black; font-size:20px;">Прайс-лист</a>
+        </header>
+        <main>
+            <h1 style="text-align:center;font-size:50px;">Разработка игр</h1>
+            <h2 style="text-align:center;font-size:40px;">Студия разработки игр</h2>
+            <img src="https://freepngimg.com/thumb/logo/86519-text-game-unity-computer-video-graphics-black.png" width="1500px">
+            <h2 id="games">Мы работаем на движке Unity 2017.3.7f+</h2>
+            <p>Хотите сделать игру как хотите вы? 
+                <br>У нас можно заказать разработку или доработку игры. 
+                <br>Мы работаем с 2 жанрами: Horror, Quests.
+            </p>
+            <p>
+                <img src="./MMMMMMMMFilessss/maps-and-location_0_1603391752.png" width="200px">
+            </p>
+            <h2>Процесс работы</h2>
+            <p>Создание игры — это всегда командная работа из нескольких этапов: 
+                <br>планирование сюжета, создание графических объектов, программирование, несколько этапов тестирования.
+                <br>Над игрой работает один программист.
+            </p>
+            <h2 id="price">Наше предложение</h2>
+            <table style="border-collapse:collapse;border:1px solid green;">
+                <tbody><tr style="border:1px solid green;background-color:palegreen;">
+                    <td>Вид работы</td>
+                    <td>Подробности</td>
+                    <td>Цена</td>
+                </tr>
+                <tr style="border:1px solid green;">
+                    <td style="background-color:palegreen;">Портирование</td>
+                    <td>Destop, Android, iOS</td>
+                    <td>от 50 тыс. руб.</td></tr>
+                
+                <tr style="border:1px solid green;">
+                    <td style="background-color:palegreen;">Локализация</td>
+                    <td>Перевод: тексты, <br>голоса, графика</td>
+                    <td>от 50 тыс. руб.</td>
+            </tr>
+            <tr style="border:1px solid green;">
+                <td style="background-color:palegreen;">Игра под ключ</td>
+                <td>Обсуждение сюжета <br>со сценаристом</td>
+                <td>Договорная</td>
+            </tr>
+            </tbody></table>
+            <h2>Популярность продукта</h2>
+            <p>Наши игры можно увидеть на городских соревнованиях по киберспорту:</p>
+            <img src="./MMMMMMMMFilessss/performance-3110696_1920 1 (3)_0_1603395974.png" width="1500px">
+        </main>
+        <footer style="background-color:darkorange; color:black">
+            <a href="https://kurs-ss-vilboa.github.io/-3-4-/#start" style="color:black;font-size:20px">В начало страницы</a>
+            <p style="font-size:15px"> Адрес: город Красочный, ул.Пиксельная, 15.</p>
+            <p>Тел.:88005553535</p>
+        </footer>
+    
+
+</body></html>
