--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     </head>
     <body style="font-family:sans-serif;">
         <header style="background-color:darkorange;color:black">
-            <img src="./MMMMMMMMFilessss/Frame 4_0_1603385959.svg" height="50px" id="start">
+            <img src="./MMMMMMMMFilessss/" height="50px" id="start">
             <a href="/#games" style="color:black; font-size:20px;">Какие игры мы делаем?</a>
             <a href="/#price" style="color:black; font-size:20px;">Прайс-лист</a>
         </header>
@@ -19,7 +19,7 @@
                 <br>Мы работаем с 2 жанрами: Horror, Quests.
             </p>
             <p>
-                <img src="./MMMMMMMMFilessss/maps-and-location_0_1603391752.png" width="200px">
+                <img src="./MMMMMMMMFilessss/" width="200px">
             </p>
             <h2>Процесс работы</h2>
             <p>Создание игры — это всегда командная работа из нескольких этапов: 
@@ -34,15 +34,10 @@
                     <td>Цена</td>
                 </tr>
                 <tr style="border:1px solid green;">
-                    <td style="background-color:palegreen;">Портирование</td>
-                    <td>Destop, Android, iOS</td>
+                    <td style="background-color:palegreen;">Steam</td>
+                    <td>Загрузка на Steam</td>
                     <td>от 50 тыс. руб.</td></tr>
                 
-                <tr style="border:1px solid green;">
-                    <td style="background-color:palegreen;">Локализация</td>
-                    <td>Перевод: тексты, <br>голоса, графика</td>
-                    <td>от 50 тыс. руб.</td>
-            </tr>
             <tr style="border:1px solid green;">
                 <td style="background-color:palegreen;">Игра под ключ</td>
                 <td>Обсуждение сюжета <br>со сценаристом</td>
@@ -50,12 +45,12 @@
             </tr>
             </tbody></table>
             <h2>Популярность продукта</h2>
-            <p>Наши игры можно увидеть на городских соревнованиях по киберспорту:</p>
-            <img src="./MMMMMMMMFilessss/performance-3110696_1920 1 (3)_0_1603395974.png" width="1500px">
+            <p>0</p>
+            <img src="./MMMMMMMMFilessss/" width="1500px">
         </main>
         <footer style="background-color:darkorange; color:black">
-            <a href="https://kurs-ss-vilboa.github.io/-3-4-/#start" style="color:black;font-size:20px">В начало страницы</a>
-            <p style="font-size:15px"> Адрес: город Красочный, ул.Пиксельная, 15.</p>
+            <a href="/#start" style="color:black;font-size:20px">В начало страницы</a>
+            <p style="font-size:15px"> Адреса нет</p>
             <p>Тел.:88005553535</p>
         </footer>
     
