--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <body style="font-family:sans-serif;">
         <header style="background-color:darkorange;color:black">
             <img src="./MMMMMMMMFilessss/" height="50px" id="start">
-            <a href="/#games" style="color:black; font-size:20px;">Какие игры мы делаем?</a>
-            <a href="/#price" style="color:black; font-size:20px;">Прайс-лист</a>
+            <a href="/#games" style="color:black; font-size:20px;">Какие игры мы разрабатываем?</a>
+            <a href="/#price" style="color:black; font-size:20px;">Прайссссс</a>
         </header>
         <main>
             <h1 style="text-align:center;font-size:50px;">Разработка игр</h1>
